add smart wifi connect

--- a/ESP-01/platformio.ini
+++ b/ESP-01/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif8266
 board = esp01
 framework = arduino
 upload_speed = 921600
+upload_port = COM20
 monitor_speed = 115200
 lib_deps = martin-ger/uMQTTBroker@^1.0.0
