--- a/android_remote/pubspec.yaml
+++ b/android_remote/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   get: ^3.24.0
   mqtt_client: ^8.1.0
+  webview_flutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
