--- a/ESP-01/platformio.ini
+++ b/ESP-01/platformio.ini
@@ -12,7 +12,10 @@
 platform = espressif8266
 board = esp01
 framework = arduino
-upload_speed = 921600
+upload_speed = 460800
 upload_port = COM20
 monitor_speed = 115200
-lib_deps = martin-ger/uMQTTBroker@^1.0.0
+monitor_port = COM20
+lib_deps = 
+	martin-ger/uMQTTBroker@^1.0.0
+	knolleary/PubSubClient@^2.8.0
