--- a/Desktop/rama/config/config.json
+++ b/Desktop/rama/config/config.json
@@ -1,5 +1,5 @@
 {
-    "camera_host": "http://192.168.0.150:8080/video_feed",
+    "camera_host": "192.168.43.44",
     "mqtt_host": "192.168.0.100",
     "speed": "79"
 }
