--- a/Desktop/requirements.txt
+++ b/Desktop/requirements.txt
@@ -1,9 +1,9 @@
-pynput==1.7.2
-imutils==0.5.3
-pythonping==1.0.15
-paho_mqtt==1.5.1
-opencv-contrib-python-headless==4.4.0.44
-opencv-python==4.4.0.44
-numpy==1.20.1
-PyQt5==5.15.0
-PyQt5-sip==12.8.0
+pynput
+imutils
+pythonping
+paho_mqtt
+opencv-contrib-python-headless
+opencv-python
+numpy
+PyQt5
+PyQt5-sip
